# DiscordBotVerification

./: .ninja_deps  .ninja_log  CMakeLists.txt  README.md  setup.sh
.cache/clangd/index/: appcommand.cpp.987B4BE7E163B792.idx  appcommand.h.F17A068EACE79866.idx  application.cpp.E3E32909D0EF3177.idx  application.h.A66B5209EEA69BF9.idx  auditlog.cpp.127581B7FC605510.idx  auditlog.h.FBDB5BA12A7E06D8.idx  automod.cpp.598E62DBE541B23A.idx  automod.cpp.9954E5D6E5365807.idx  automod.h.65F1AAEBC2C7C5AB.idx  automod_rule_create.cpp.CD515E37577847FB.idx  automod_rule_delete.cpp.38975344CA808FAF.idx  automod_rule_execute.cpp.CCD32301F591FEF7.idx  automod_rule_update.cpp.A1B4C7D9E8FD3F34.idx  ban.cpp.B75DFB413F3EE70B.idx  ban.h.C363EB977196DED2.idx  cache.cpp.F5C9044A8377C19C.idx  cache.h.D707489D6DDA28FE.idx  channel.cpp.7C31B8AEBBD73BC2.idx  channel.cpp.91CBA3E942A68295.idx  channel.h.876AAE0629DD497A.idx  channel_create.cpp.08A3FFC71C2B81B4.idx  channel_delete.cpp.683FC69E3D0EBC1D.idx  channel_pins_update.cpp.2603BBCC0D9C1355.idx  channel_update.cpp.A1393A2B7D032A89.idx  cluster.cpp.D2F5AC80F7FE06A2.idx  cluster.h.DF8E6F7124D83F7B.idx  cluster_sync_calls.cpp.09B4EB380B3BCE10.idx  cluster_sync_calls.h.E01988E381F4F52A.idx  cmake_pch.hxx.753A1C105E83F048.idx  cmake_pch.hxx.cxx.AC3281F47FC0A630.idx  collector.h.AE69871BBDDD1A18.idx  colors.h.4928D9093201C766.idx  commandhandler.cpp.CE18B6CB961EDFA1.idx  commandhandler.h.C8F18A57D09A38F1.idx  confirmation.cpp.8DB09F79B4B2D0DB.idx  coro.h.E031606FFC0876D1.idx  discordclient.cpp.0826F3D22AF5AE0F.idx  (+153 more)
src/: main.cpp
